--- a/app/src/main/res/layout/fragment_exam_center.xml
+++ b/app/src/main/res/layout/fragment_exam_center.xml
@@ -33,6 +33,7 @@
                 android:layout_height="wrap_content">
 
                 <LinearLayout
+                    android:id="@+id/linear_info"
                     android:orientation="vertical"
                     android:paddingTop="@dimen/profile_card_padding"
                     android:paddingBottom="@dimen/profile_padding"
@@ -128,32 +129,20 @@
 
 
                 </LinearLayout>
+
+                <TextView
+                    android:id="@+id/txt_not_alloted_msg"
+                    android:text="Exam center not alloted yet"
+                    android:visibility="invisible"
+                    android:layout_margin="@dimen/content_title_margin"
+                    style="@style/title_text_style"
+                    android:textColor="@color/text_color"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
             </android.support.v7.widget.CardView>
         </LinearLayout>
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:padding="@dimen/profile_padding"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:text="For more details contact us"
-                android:layout_margin="@dimen/content_title_margin"
-                style="@style/title_text_style"
-                android:textColor="@color/text_color"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_view"
-                android:layout_above="@id/btn_logout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            </android.support.v7.widget.RecyclerView>
-        </LinearLayout>
 
     </LinearLayout>
 
