--- a/app/src/main/res/layout/fragment_other.xml
+++ b/app/src/main/res/layout/fragment_other.xml
@@ -1,14 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_margin="@dimen/activity_horizontal_margin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.OtherFragment">
+
+   <LinearLayout
+       android:orientation="vertical"
+       android:gravity="center"
+       android:layout_centerInParent="true"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+
+   <ImageView
+       android:src="@drawable/vvm_logo_old"
+       android:layout_width="180dp"
+       android:layout_height="180dp" />
+
+      <TextView
+          style="@style/text_view_style"
+          android:textSize="@dimen/other_title_text_size"
+          android:padding="@dimen/other_txt_padding"
+          android:gravity="center"
+          android:textColor="@color/text_color"
+          android:text="@string/vvm_title"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content" />
+
+      <TextView
+          android:text="Student App"
+          android:padding="@dimen/other_txt_padding"
+          style="@style/title_text_style"
+          android:textColor="@color/text_color"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content" />
+
+   </LinearLayout>
 
    <Button
        android:id="@+id/btn_logout"
        android:layout_alignParentBottom="true"
        android:text="Logout"
+       android:background="@drawable/custom_login_btn"
+       android:textColor="@android:color/white"
+       android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
 
