--- a/app/src/main/res/layout/fragment_student_profile.xml
+++ b/app/src/main/res/layout/fragment_student_profile.xml
@@ -2,6 +2,7 @@
 <ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
+    android:id="@+id/rootview"
     xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout
     android:orientation="vertical"
@@ -42,6 +43,7 @@
             </android.support.v7.widget.CardView>
 
             <LinearLayout
+                android:id="@+id/lin_buttons"
                 android:orientation="horizontal"
                 android:gravity="center"
                 android:layout_marginTop="10dp"
@@ -58,6 +60,7 @@
                     android:textAllCaps="false"
                     android:padding="8dp"
                     android:minHeight="1dp"
+                    style="@style/button_style"
                     android:layout_margin="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -71,11 +74,25 @@
                     android:textAllCaps="false"
                     android:padding="8dp"
                     android:minHeight="1dp"
+                    style="@style/button_style"
                     android:layout_margin="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/txt_warning"
+                android:layout_centerHorizontal="true"
+                android:text="Once profile photo is selected, it can not be changed."
+                android:gravity="center"
+                android:layout_below="@+id/lin_buttons"
+                android:layout_marginTop="@dimen/content_title_margin"
+                style="@style/title_text_style"
+                android:textSize="12dp"
+                android:textColor="@color/red_700"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
         </RelativeLayout>
 
