--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -64,4 +64,7 @@
 
     <dimen name="coord_padding">12dp</dimen>
 
+    <dimen name="other_txt_padding">9dp</dimen>
+    <dimen name="other_title_text_size">20dp</dimen>
+
 </resources>
