--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,46 @@
     android:layout_height="match_parent"
     tools:context=".activity.HomeActivity">
 
-   <FrameLayout
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/toolbar_relative"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+        <RelativeLayout
+            android:layout_alignParentTop="true"
+            android:background="@color/colorPrimary"
+            android:elevation="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize">
+
+            <TextView
+                android:id="@+id/web_title"
+                android:layout_toRightOf="@+id/linear_back"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:text="VVM Exam"
+                android:padding="10dp"
+                android:layout_centerVertical="true"
+                android:textColor="@android:color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/btn_exam"
+                android:text="Go to Exam"
+                android:padding="10dp"
+                android:layout_centerVertical="true"
+                android:background="@android:color/transparent"
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+    </android.support.design.widget.AppBarLayout>
+
+    <FrameLayout
+        android:layout_below="@+id/toolbar_relative"
        android:layout_above="@+id/navigation"
        android:id="@+id/container"
        android:layout_width="match_parent"
