--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -6,6 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="50dp">
 
+    <Button
+        android:id="@+id/btn_switch_lang"
+        android:text="MR"
+        android:textColor="@android:color/white"
+        android:layout_alignParentLeft="true"
+        android:background="@android:color/transparent"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_centerVertical="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/txt_timer"
         android:textColor="@android:color/white"
@@ -19,11 +30,23 @@
     app:srcCompat="@drawable/ic_arrow_drop"
     android:padding="8dp"
     android:background="@android:color/transparent"
-    android:foreground="?attr/selectableItemBackground"
+    android:foreground="?android:attr/selectableItemBackground"
     android:layout_alignParentRight="true"
     android:layout_centerVertical="true"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/btn_end_exam"
+        android:padding="8dp"
+        android:text="End Exam"
+        android:textColor="@android:color/white"
+        android:layout_toLeftOf="@+id/btn_switch"
+        android:background="@android:color/transparent"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_centerVertical="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <ImageButton
         android:id="@+id/btn_mark_review"
@@ -32,7 +55,7 @@
         app:srcCompat="@drawable/ic_bookmark"
         android:padding="8dp"
         android:background="@android:color/transparent"
-        android:foreground="?attr/selectableItemBackground"
+        android:foreground="?android:attr/selectableItemBackground"
         android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
