--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -67,4 +67,7 @@
     <dimen name="other_txt_padding">9dp</dimen>
     <dimen name="other_title_text_size">20dp</dimen>
 
+    <dimen name="exam_btn_width">110dp</dimen>
+    <dimen name="exam_btn_padding">8dp</dimen>
+
 </resources>
