--- a/app/src/main/res/drawable-v24/custom_white_btn.xml
+++ b/app/src/main/res/drawable-v24/custom_white_btn.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-   <solid android:color="@color/grey_600"></solid>
+   <solid android:color="@android:color/white"></solid>
 
-   <!-- <stroke android:color="@color/colorPrimary"
+    <!--<stroke android:color="@color/login_text_border"
         android:width="1dp"></stroke>-->
 
-    <corners android:radius="25dp" />
+    <corners android:radius="4dp" />
 
 </shape>
