--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -15,7 +15,7 @@
             android:background="@color/colorAccent"
             android:elevation="5dp"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
+            android:layout_height="?android:attr/actionBarSize">
 
             <LinearLayout
                 android:id="@+id/linear_back"
@@ -26,7 +26,7 @@
                 android:layout_height="match_parent">
                 <ImageButton
                     android:id="@+id/btn_back"
-                    android:src="@drawable/ic_arrow_back"
+                    app:srcCompat="@drawable/ic_arrow_back"
                     android:background="@android:color/transparent"
                     android:layout_centerVertical="true"
                     android:layout_width="match_parent"
